# demuxEMS

./: CMakeLists.txt  FindHTSLIB.cmake  README.md
src/: BamAlignment.cpp  BamAlignment.hpp  BarcodeUtils.hpp  CIGARstring.hpp  CMakeLists.txt  DataCollector.cpp  DataCollector.hpp  DemuxAlgo.cpp  DemuxAlgo.hpp  NucleotideDist.cpp  NucleotideDist.hpp  QUALstring.hpp  SEQstring.cpp  SEQstring.hpp  SufficientStatistics.hpp  VCFLoader.cpp  VCFLoader.hpp  debug.cpp  demuxEMS.cpp  scan_snp.cpp  test.cpp
